fixed margin from cutting off the total colunn at table

--- a/style.css
+++ b/style.css
@@ -60,7 +60,7 @@ table, th, td {
   border: 1px solid black;
 }
 #myDynamicTable {
-  width: 80%;
+  width: 82%;
   margin: auto;
 }
 .total {
